[package]
name = "dis-zero"
version = "0.1.0"
authors = ["armoha <kein0011@naver.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
build = "src/build.rs"

[dependencies]
winapi = { version = "^0.3", features = ["std", "everything"] }
libc = { version = "^0.2", features = ["use_std", "extra_traits"] }
getset = "^0.0"
failure = "^0.1"

[build-dependencies]
failure = "^0.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.9"

[package.metadata.winres]
OriginalFilename = "DisZero.exe"
LegalCopyright = "Copyright © 2019"
FileDescription = "DisZero"
